force-app/main/default/objects/Associated_Club_Position__c/Associated_Club_Position__c.object-meta.xml
<CustomObject>
    <label>Associated Club Position</label>
    <nameField>
        <displayFormat>CB-{00}</displayFormat>
        <label>Club and Board ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Club Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>