force-app/main/default/objects/Associated_Club_Position__c/fields/Club_and_Board_Records__c.field-meta.xml
<CustomField>
    <fullName>Club_and_Board_Records__c</fullName>
    <label>Club and Board Records</label>
    <referenceTo>ClubandBoardRecords__c</referenceTo>
    <relationshipName>Associated_Clubs_Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>