force-app/main/default/objects/Associated_Club_Position__c/fields/CurrentPosition__c.field-meta.xml
<CustomField>
    <fullName>CurrentPosition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Position</label>
    <type>Checkbox</type>
</CustomField>