force-app/main/default/objects/Associated_Club_Position__c/fields/EndYear__c.field-meta.xml
<CustomField>
    <fullName>EndYear__c</fullName>
    <label>End Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>