force-app/main/default/objects/Associated_Club_Position__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipName>Associated_Clubs_Positions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>