force-app/main/default/objects/Associated_Club_Position__c/fields/StartYear__c.field-meta.xml
<CustomField>
    <fullName>StartYear__c</fullName>
    <label>Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>